fix(styling): properly align flexbox ms-select icon+text vertically (#1397)
* fix(styling): properly align flexbox ms-select icon+text vertically

* chore: change material ms-select font size & improve alignment
- also fix ms-select color that were showing as blue instead of the expected green theme color

--- a/examples/vite-demo-vanilla-bundle/src/material-styles.scss
+++ b/examples/vite-demo-vanilla-bundle/src/material-styles.scss
@@ -66,6 +66,8 @@
     --slick-header-resizable-hover-border-right: 2px solid #83d9a0;
     --slick-slider-filter-filled-track-color: #9ac49c;
 
+    --ms-ok-button-text-color: #009530;
+    --ms-select-all-text-color: #007c28;
     --slick-multiselect-icon-border: none;
     --slick-multiselect-icon-radio-border: none;
     --slick-multiselect-ok-button-text-color: #009530;
@@ -109,4 +111,3 @@
     }
   }
 }
-
