--- a/packages/common/src/styles/_variables-theme-material.scss
+++ b/packages/common/src/styles/_variables-theme-material.scss
@@ -114,7 +114,7 @@ $slick-compound-filter-operator-select-border:              1px solid #{lighten(
 $slick-compound-filter-text-color:                          darken($slick-primary-color, 20%) !default;
 $slick-multiselect-icon-arrow-font-size:                    16px !default;
 $slick-multiselect-icon-color:                              $slick-primary-color !default;
-$slick-multiselect-icon-font-size:                          10px !default;
+$slick-multiselect-icon-font-size:                          14px !default;
 $slick-multiselect-icon-height:                             15px !default;
 $slick-multiselect-icon-width:                              15px !default;
 $slick-multiselect-icon-margin:                             0px 4px 0 0 !default;
